--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -8,6 +8,7 @@
 	<!--{% load static %}-->
 	
 	<link rel="stylesheet" href="{% static 'tailwind-output.css' %}">
+	<link rel="shortcut icon" href="#">
 	<script src="{% static '/node_modules/flowbite/dist/flowbite.min.js' %}"></script>
 	
 </head>
