--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -19,7 +19,7 @@
 			<!-- Runda i kategoria -->
 			<div class="flex flex-row justify-between w-full min-h-[10%]">
 				<div class="w-[200px] lg:w-[250px] flex flex-row text-xl align-center">
-					<div class="border-2 flex flex-row items-center justify-center px-2 text-white border-4 border-neutral-900 bg-neutral-800/75">
+					<div class="flex flex-row items-center justify-center px-2 text-white border-4 border-neutral-900 bg-neutral-800/75">
 						<div class="text-lg lg:text-xl flex items-center justify-center">Runda:</div>
 						<div class="text-xl lg:text-2xl ml-2 flex items-center justify-center">123</div>
 					</div>
@@ -102,7 +102,7 @@
 			</div>
 
 			<!-- Pytanie i odpowiedz(i)-->
-			<div class="pytanie-odpowiedz w-full flex flex-row border-2 rounded-r-2xl h-[30%] overflow-hidden bg-neutral-800/75 border-4 border-neutral-900 divide-x-4 divide-neutral-900">
+			<div class="pytanie-odpowiedz w-full flex flex-row rounded-r-2xl h-[30%] overflow-hidden bg-neutral-800/75 border-4 border-neutral-900 divide-x-4 divide-neutral-900">
 				<div class="flex-[8] overflow-auto p-3 min-h-full text-lg">Tresc pytaniaaaaaaaaaaaa</div>
 				<div class="flex-[3] overflow-auto p-3 min-h-full text-lg">Poprawna odpowiedz(i)</div>
 				<div class="flex-[2] flex flex-col overflow-hidden divide-y-2 divide-neutral-900">
