Bieżąca zmiana ilości pozostałej puli

--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -42,7 +42,7 @@
 				<!-- Druzyna Niebiescy-->
 				
 					<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-[rgb(8,26,77)] border-[rgb(8,26,77)]">
-						<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(8,35,112)] text-5xl"><span>5000</span></div>
+						<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(8,35,112)] text-5xl"><span>{{pula_niebiescy}}</span></div>
 						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-[rgb(8,26,77)]">
 							<input type = "hidden" name = "kasa_niebiescy" id = "kasa_niebiescy">
 							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(8,26,77)] pt-3" type="text" name="kasa-niebiescy" id="kasa-niebiescy" value="12345" >
@@ -57,7 +57,7 @@
 			
 					<!-- Druzyna Zieloni-->
 					<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-[rgb(3,44,29)] border-[rgb(3,44,29)]">
-						<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(2,65,43)] text-5xl"><span>5000</span></div>
+						<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(2,65,43)] text-5xl"><span>{{pula_zieloni}}</span></div>
 						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-[rgb(3,44,29)]">
 							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(3,44,29)] pt-3" type="text" name="kasa-zieloni" id="kasa-zieloni" value="12345" >
 							<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-[rgb(3,44,29)]">
@@ -71,7 +71,7 @@
 
 					<!-- Druzyna Zolci-->
 					<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-yellow-800 border-yellow-800">
-						<div class="srodki w-full flex items-center justify-center h-[45%] bg-yellow-500 text-5xl"><span>5000</span></div>
+						<div class="srodki w-full flex items-center justify-center h-[45%] bg-yellow-500 text-5xl"><span>{{pula_zolci}}</span></div>
 						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-yellow-800">
 							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(95,75,10)] pt-3" type="text" name="kasa-zolci" id="kasa-zolci" value="12345" >
 							<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-yellow-800">
@@ -85,7 +85,7 @@
 					
 					<!-- Druzyna Mistrzowie-->
 					<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-[rgb(38,13,39)] border-[rgb(38,13,39)]">
-						<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(54,41,66)] text-5xl"><span>5000</span></div>
+						<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(54,41,66)] text-5xl"><span>{{pula_mistrzowie}}</span></div>
 						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-[rgb(38,13,39)]">
 							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(38,13,39)] pt-3" type="text" name="kasa-mistrzowie" id="kasa-mistrzowie" value="12345" >
 							<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-[rgb(38,13,39)]">
