Dodanie tymczasowej puli

--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -66,7 +66,7 @@
 						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-[rgb(3,44,29)]">
 							<input type = "hidden" name = "add-X-zieloni" id = "add-X-zieloni">
 							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(3,44,29)] pt-3" type="text" name="add-X-zieloni" id="add-X-zieloni" value="{{ add_X_zieloni }}" >
-							<input type = "submit" name = "add-X-zieloni" value = "{{add_X_zieloni}}" hidden/>
+							<input type = "submit" name = "add-X-zieloni" value = "{{ add_X_zieloni }}" hidden/>
 							<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-[rgb(3,44,29)]">
 								<button type = "submit" name = "action" value = "add-100-zieloni" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(3,44,29)] text-base">+100</button>
 								<button type = "submit" name = "action" value = "add-200-zieloni" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(3,44,29)] text-base">+200</button>
@@ -82,7 +82,7 @@
 						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-yellow-800">
 							<input type = "hidden" name = "add-X-zolci" id = "add-X-zolci">
 							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(95,75,10)] pt-3" type="text" name="add-X-zolci" id="add-X-zolci" value="{{ add_X_zolci }}" >
-							<input type = "submit" name = "add-X-zieloni" value = "{{add_X_zieloni}}" hidden/>
+							<input type = "submit" name = "add-X-zolci" value = "{{add_X_zolci}}" hidden/>
 							<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-yellow-800">
 								<button type = "submit" name = "action" value = "add-100-zolci" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-yellow-800 text-base">+100</button>
 								<button type = "submit" name = "action" value = "add-200-zolci" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-yellow-800 text-base">+200</button>
