--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -82,7 +82,9 @@
 
 					<!-- Druzyna Zolci-->
 					<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-yellow-800 border-yellow-800">
-						<div class="srodki w-full flex items-center justify-center h-[45%] bg-yellow-500 text-5xl"><span>{{pula_zolci}}</span></div>
+						<div class="srodki w-full flex items-center justify-center h-[45%] bg-yellow-500 text-5xl">
+							<span>{{pula_zolci}}</span>
+						</div>
 						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-yellow-800">
 							<input type = "hidden" name = "add-X-zolci" id = "add-X-zolci">
 							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(95,75,10)] pt-3" type="text" name="add-X-zolci" id="add-X-zolci" value="{{ add_X_zolci }}" >
@@ -98,7 +100,9 @@
 					
 					<!-- Druzyna Mistrzowie-->
 					<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-[rgb(38,13,39)] border-[rgb(38,13,39)]">
-						<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(54,41,66)] text-5xl"><span>{{pula_mistrzowie}}</span></div>
+						<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(54,41,66)] text-5xl">
+							<span>{{pula_mistrzowie}}</span>
+						</div>
 						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-[rgb(38,13,39)]">
 							<input type = "hidden" name = "add-X-mistrzowie" id = "add-X-mistrzowie">
 							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(38,13,39)] pt-3" type="text" name="add-X-mistrzowie" id="add-X-mistrzowie" value="{{ add_X_mistrzowie }}" >
@@ -116,8 +120,12 @@
 
 			<!-- Pula -->
 			<div class="pula-koniec flex flex-row w-1/2 min-h-[12%] bg-neutral-800/75 border-4 border-neutral-900 rounded-r-2xl overflow-hidden divide-x-4 divide-neutral-900">
-				<div class="pula w-full flex-[8] flex justify-center items-center text-4xl "><span>{{pula}}</span></div>
-				<button class="w-full flex-[3] bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black text-lg font-medium border-l-0">Koniec<br>licytacji</button>
+				<div class="pula w-full flex-[8] flex justify-center items-center text-4xl ">
+					<span>{{pula}}</span>
+				</div>
+				<form method = "post" action = "{% url 'gra'%}">{% csrf_token %}
+					<button type = "submit" name = "koniec-licytacji" value = "koniec-licytacji" class="w-full flex-[3] bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black text-lg font-medium border-l-0">Koniec<br>licytacji</button>
+				</form>
 			</div>
 
 			<!-- Pytanie i odpowiedz(i)-->
