--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -144,8 +144,8 @@
 
 			<!-- Dodatkowe przyciski -->
 			<div class="action-container flex flex-row w-full min-h-[10%] gap-[10%] justify-center">
-				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full">Kara</button>
-				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full">1 na 1</button>
+				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full">Kara</button> <!-- dodaj modal do tego-->
+				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full">1 na 1</button> <!-- dodaj modal do tego-->
 				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black reset-gry rounded-full" data-modal-target="popup-modal" data-modal-toggle="popup-modal">Reset gry(?)</button>
 			</div>
 		</div>
@@ -166,12 +166,14 @@
 						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
 					</svg>
 					<h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Czy NA PEWNO chcesz zresetować grę?</h3>
-					<button data-modal-hide="popup-modal" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
-						Tak, na pewno
-					</button>
-					<button data-modal-hide="popup-modal" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
-						No kurde w sumie to nie
-					</button>
+					<form method = "post" action = "{% url 'gra' %}">{% csrf_token %}
+						<button type = "submit" name = "reset" value = "reset" data-modal-hide="popup-modal" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+							Tak, na pewno
+						</button>
+						<button data-modal-hide="popup-modal" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+							No kurde w sumie to nie
+						</button>
+					</form>
 				</div>
 			</div>
 		</div>
