--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -40,82 +40,89 @@
 			</div>
 			
 			<!-- Druzyny i ich pieniadze -->
-			<form method = "post" action = "{% url 'gra' %}" class="min-h-[30%]">{% csrf_token %}
+			
 				<div class="team-container flex justify-evenly w-full gap-1 lg:gap-5 min-h-full">
-				<!-- Druzyna Niebiescy-->
-				
-					<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-[rgb(8,26,77)] border-[rgb(8,26,77)]">
-						<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(8,35,112)] text-5xl">
-							<span>{{pula_niebiescy}}</span>
-						</div>
-						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-[rgb(8,26,77)]">
-							<input type = "hidden" name = "add-X-niebiescy" id = "add-X-niebiescy">
-							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(8,26,77)] pt-3" type="text" name="add-X-niebiescy" id="add-X-niebiescy" value="{{ add_X_niebiescy }}" >
-							<input type = "submit" name = "add-X-niebiescy" value = "{{add_X_niebiescy}}" hidden/>
-							<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-[rgb(8,26,77)]">
-								<button type = "submit" name = "action" value = "add-100-niebiescy" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(8,26,77)] text-base">+100</button>
-								<button type = "submit" name = "action" value = "add-200-niebiescy" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(8,26,77)] text-base">+200</button>
-								<button type = "submit" name = "action" value = "add-500-niebiescy" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(8,26,77)] text-base">+500</button>
-								<button type = "submit" name = "action" value = "add-vabank-niebiescy" class="flex-[3] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(8,26,77)] vabank text-base leading-tight">va<br>bank!</button>
+					
+					<!-- Druzyna Niebiescy-->
+					<form method = "post" action = "{% url 'gra' %}" class="min-h-[30%]">{% csrf_token %}
+						<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-[rgb(8,26,77)] border-[rgb(8,26,77)]">
+							<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(8,35,112)] text-5xl">
+								<span>{{pula_niebiescy}}</span>
+							</div>
+							<div class="w-full items-center h-[55%] box-content divide-y-2 divide-[rgb(8,26,77)]">
+								<input type = "hidden" name = "add-X-niebiescy" id = "add-X-niebiescy">
+								<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(8,26,77)] pt-3" type="text" name="add-X-niebiescy" id="add-X-niebiescy" >
+								<input type = "submit" name = "add-X-niebiescy" value = "{{add_X_niebiescy}}" hidden/>
+								<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-[rgb(8,26,77)]">
+									<button type = "submit" name = "action" value = "add-100-niebiescy" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(8,26,77)] text-base">+100</button>
+									<button type = "submit" name = "action" value = "add-200-niebiescy" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(8,26,77)] text-base">+200</button>
+									<button type = "submit" name = "action" value = "add-500-niebiescy" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(8,26,77)] text-base">+500</button>
+									<button type = "submit" name = "action" value = "add-vabank-niebiescy" class="flex-[3] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(8,26,77)] vabank text-base leading-tight">va<br>bank!</button>
+								</div>
 							</div>
 						</div>
-					</div>
+					</form>
 			
 					<!-- Druzyna Zieloni-->
-					<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-[rgb(3,44,29)] border-[rgb(3,44,29)]">
-						<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(2,65,43)] text-5xl">
-							<span>{{pula_zieloni}}</span>
-						</div>
-						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-[rgb(3,44,29)]">
-							<input type = "hidden" name = "add-X-zieloni" id = "add-X-zieloni">
-							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(3,44,29)] pt-3" type="text" name="add-X-zieloni" id="add-X-zieloni" value="{{ add_X_zieloni }}" >
-							<input type = "submit" name = "add-X-zieloni" value = "{{ add_X_zieloni }}" hidden/>
-							<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-[rgb(3,44,29)]">
-								<button type = "submit" name = "action" value = "add-100-zieloni" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(3,44,29)] text-base">+100</button>
-								<button type = "submit" name = "action" value = "add-200-zieloni" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(3,44,29)] text-base">+200</button>
-								<button type = "submit" name = "action" value = "add-500-zieloni" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(3,44,29)] text-base">+500</button>
-								<button type = "submit" name = "action" value = "add-vabank-zieloni" class="flex-[3] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(3,44,29)] vabank text-base leading-tight">va<br>bank!</button>
+					<form method = "post" action = "{% url 'gra' %}" class="min-h-[30%]">{% csrf_token %}
+						<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-[rgb(3,44,29)] border-[rgb(3,44,29)]">
+							<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(2,65,43)] text-5xl">
+								<span>{{pula_zieloni}}</span>
+							</div>
+							<div class="w-full items-center h-[55%] box-content divide-y-2 divide-[rgb(3,44,29)]">
+								<input type = "hidden" name = "add-X-zieloni" id = "add-X-zieloni">
+								<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(3,44,29)] pt-3" type="text" name="add-X-zieloni" id="add-X-zieloni" >
+								<input type = "submit" name = "add-X-zieloni" value = "{{ add_X_zieloni }}" hidden/>
+								<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-[rgb(3,44,29)]">
+									<button type = "submit" name = "action" value = "add-100-zieloni" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(3,44,29)] text-base">+100</button>
+									<button type = "submit" name = "action" value = "add-200-zieloni" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(3,44,29)] text-base">+200</button>
+									<button type = "submit" name = "action" value = "add-500-zieloni" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(3,44,29)] text-base">+500</button>
+									<button type = "submit" name = "action" value = "add-vabank-zieloni" class="flex-[3] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(3,44,29)] vabank text-base leading-tight">va<br>bank!</button>
+								</div>
 							</div>
 						</div>
-					</div>
-
+					</form>
 					<!-- Druzyna Zolci-->
-					<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-yellow-800 border-yellow-800">
-						<div class="srodki w-full flex items-center justify-center h-[45%] bg-yellow-500 text-5xl">
-							<span>{{pula_zolci}}</span>
-						</div>
-						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-yellow-800">
-							<input type = "hidden" name = "add-X-zolci" id = "add-X-zolci">
-							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(95,75,10)] pt-3" type="text" name="add-X-zolci" id="add-X-zolci" value="{{ add_X_zolci }}" >
-							<input type = "submit" name = "add-X-zolci" value = "{{add_X_zolci}}" hidden/>
-							<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-yellow-800">
-								<button type = "submit" name = "action" value = "add-100-zolci" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-yellow-800 text-base">+100</button>
-								<button type = "submit" name = "action" value = "add-200-zolci" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-yellow-800 text-base">+200</button>
-								<button type = "submit" name = "action" value = "add-500-zolci" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-yellow-800 text-base">+500</button>
-								<button type = "submit" name = "action" value = "add-vabank-zolci" class="flex-[3] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-yellow-800 vabank text-base leading-tight">va<br>bank!</button>
+					<form method = "post" action = "{% url 'gra' %}" class="min-h-[30%]">{% csrf_token %}
+						<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-yellow-800 border-yellow-800">
+							<div class="srodki w-full flex items-center justify-center h-[45%] bg-yellow-500 text-5xl">
+								<span>{{pula_zolci}}</span>
+							</div>
+							<div class="w-full items-center h-[55%] box-content divide-y-2 divide-yellow-800">
+								<input type = "hidden" name = "add-X-zolci" id = "add-X-zolci">
+								<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(95,75,10)] pt-3" type="text" name="add-X-zolci" id="add-X-zolci" >
+								<input type = "submit" name = "add-X-zolci" value = "{{add_X_zolci}}" hidden/>
+								<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-yellow-800">
+									<button type = "submit" name = "action" value = "add-100-zolci" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-yellow-800 text-base">+100</button>
+									<button type = "submit" name = "action" value = "add-200-zolci" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-yellow-800 text-base">+200</button>
+									<button type = "submit" name = "action" value = "add-500-zolci" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-yellow-800 text-base">+500</button>
+									<button type = "submit" name = "action" value = "add-vabank-zolci" class="flex-[3] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-yellow-800 vabank text-base leading-tight">va<br>bank!</button>
+								</div>
 							</div>
 						</div>
-					</div>
+					</form>
 					
 					<!-- Druzyna Mistrzowie-->
-					<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-[rgb(38,13,39)] border-[rgb(38,13,39)]">
-						<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(54,41,66)] text-5xl">
-							<span>{{pula_mistrzowie}}</span>
-						</div>
-						<div class="w-full items-center h-[55%] box-content divide-y-2 divide-[rgb(38,13,39)]">
-							<input type = "hidden" name = "add-X-mistrzowie" id = "add-X-mistrzowie">
-							<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(38,13,39)] pt-3" type="text" name="add-X-mistrzowie" id="add-X-mistrzowie" value="{{ add_X_mistrzowie }}" >
-							<input type = "submit" name = "add-X-mistrzowie" value = "{{add_X_mistrzowie}}" hidden/>
-							<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-[rgb(38,13,39)]">
-								<button type = "submit" name = "action" value = "add-100-mistrzowie" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(38,13,39)] text-base">+100</button>
-								<button type = "submit" name = "action" value = "add-200-mistrzowie" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(38,13,39)] text-base">+200</button>
-								<button type = "submit" name = "action" value = "add-500-mistrzowie" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(38,13,39)] text-base">+500</button>
-								<button type = "submit" name = "action" value = "add-vabank-mistrzowie" class="flex-[3] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(38,13,39)] vabank text-base leading-tight">va<br>bank!</button>
+					<form method = "post" action = "{% url 'gra' %}" class="min-h-[30%]">{% csrf_token %}
+						<div class="flex flex-col items-center border-8 rounded-b-2xl overflow-hidden text-2xl justify-evenly gap-2 bg-[rgb(38,13,39)] border-[rgb(38,13,39)]">
+							<div class="srodki w-full flex items-center justify-center h-[45%] bg-[rgb(54,41,66)] text-5xl">
+								<span>{{pula_mistrzowie}}</span>
+							</div>
+							<div class="w-full items-center h-[55%] box-content divide-y-2 divide-[rgb(38,13,39)]">
+								<input type = "hidden" name = "add-X-mistrzowie" id = "add-X-mistrzowie">
+								<input class="kasa text-center flex items-center justify-center w-full h-1/2 text-2xl border-none text-[rgb(38,13,39)] pt-3" type="text" name="add-X-mistrzowie" id="add-X-mistrzowie" >
+								<input type = "submit" name = "add-X-mistrzowie" value = "{{add_X_mistrzowie}}" hidden/>
+								<div class="kasa-buttons flex flex-row w-full h-1/2 divide-x-2 divide-[rgb(38,13,39)]">
+									<button type = "submit" name = "action" value = "add-100-mistrzowie" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(38,13,39)] text-base">+100</button>
+									<button type = "submit" name = "action" value = "add-200-mistrzowie" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(38,13,39)] text-base">+200</button>
+									<button type = "submit" name = "action" value = "add-500-mistrzowie" class="flex-[2] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(38,13,39)] text-base">+500</button>
+									<button type = "submit" name = "action" value = "add-vabank-mistrzowie" class="flex-[3] flex items-center justify-center min-w-0 h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-[rgb(38,13,39)] vabank text-base leading-tight">va<br>bank!</button>
+								</div>
 							</div>
 						</div>
-					</div>
+					</form>
 				</div>
-			</form>
+			
 
 			<!-- Pula -->
 			<div class="pula-koniec flex flex-row w-1/2 min-h-[12%] bg-neutral-800/75 border-4 border-neutral-900 rounded-r-2xl overflow-hidden divide-x-4 divide-neutral-900">
