--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -181,6 +181,41 @@
 			</div>
 		</div>
 	</div>
+
+	{% if messages %}
+		<div modal-backdrop class="bg-gray-900/50 dark:bg-gray-900/80 fixed inset-0 z-40"></div>
+		{% for message in messages %}
+			{% if message.message == "6 runda - zla odp przez 1sza druzyne" %}
+			<div id="popup-runda-6" tabindex="-1" class="overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full flex">
+				<div class="relative p-4 w-full max-w-md max-h-full">
+					<div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+						<button type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="popup-runda-6">
+							<svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+								<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+							</svg>
+							<span class="sr-only">Close modal</span>
+						</button>
+						<div class="p-4 md:p-5 text-center">
+							<svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+								<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+							</svg>
+							<h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Runda 6 - Czy 2ga najbardziej zamozna druzyna dobrze odpowiedziala to pytanie?</h3>
+							<form method = "post" action = "{% url 'gra' %}">{% csrf_token %}
+								<button type = "submit" name = "reset" value = "reset" data-modal-hide="popup-runda-6" type="button" class="text-white bg-lime-600 hover:bg-lime-800 focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+									Tak, hihi :3
+								</button>
+								<button data-modal-hide="popup-runda-6" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-red-600 rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+									Neiiii UnU
+								</button>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+			{% endif %}
+		{% endfor %}
+	{% endif %} 
+
 </body>
 
 </html>
